[package]
name = "website-screenshot"
version = "1.2.0"
authors = ["Tomio <mail@tomio.fun>"]
build = "build.rs"
categories = ["caching", "command-line-utilities", "database-implementations", "web-programming"]
edition = "2021"
include = [
  "src/**/*",
  "evasions/*",
  "build.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "/README.md",
]
keywords = ["chrome", "chromedriver", "screenshots", "redis"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devtomio/website-screenshot"
description = "📸 website screenshots as a service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-static-files = "4.0.0"
anyhow = "1.0.66"
async-trait = "0.1.58"
cfg-if = "1.0.0"
cuid = "1.2.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures-util = "0.3.25"
http = "0.2.8"
once_cell = "1.16.0"
rayon = "1.6.0"
regress = "0.4.1"
serde_json = "1.0.88"
static-files = "0.2.3"
tracing = "0.1.37"
tracing-actix-web = "0.6.2"
url = "2.3.1"
website-screenshot-actix-governor = "0.3.0"

[dependencies.tokio]
version = "1.22.0"
features = ["full"]

[dependencies.fantoccini]
version = "0.19.3"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.redis]
version = "0.22.1"
features = ["tokio-comp"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.rust-s3]
version = "0.32.3"
default-features = false
features = ["tokio-rustls-tls", "tags"]
optional = true

[dependencies.sled]
version = "0.34.7"
optional = true

[dependencies.base64]
version = "0.13.1"
optional = true

[build-dependencies]
version_check = "0.9.4"
static-files = "0.2.3"

[features]
default = ["fs_storage"]
fs_storage = []
cloudinary_storage = ["dep:base64"]
s3_storage = ["dep:rust-s3"]
tixte_storage = ["reqwest/multipart"]
sled_storage = ["dep:sled"]

[profile.release]
lto = true
codegen-units = 1
