[package]
name = "website-screenshot"
version = "1.2.0"
authors = ["Tomio <mail@tomio.fun>"]
build = "build.rs"
categories = ["caching", "command-line-utilities", "database-implementations", "web-programming"]
edition = "2021"
include = [
  "src/**/*",
  "evasions/*",
  "build.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "/README.md",
]
keywords = ["chrome", "chromedriver", "screenshots", "redis"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devtomio/website-screenshot"
description = "📸 website screenshots as a service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-static-files = "4.0.1"
anyhow = "1.0.81"
async-trait = "0.1.79"
cfg-if = "1.0.0"
cuid2 = "0.1.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures-util = "0.3.30"
http = "0.2.12"
once_cell = "1.19.0"
rayon = "1.10.0"
regress = "0.9.0"
serde_json = "1.0.115"
stable-pattern = "0.1.0"
static-files = "0.2.3"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
url = "2.5.0"
website-screenshot-actix-governor = "0.3.0"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.fantoccini]
version = "0.19.3"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.redis]
version = "0.25.2"
features = ["tokio-comp"]

[dependencies.reqwest]
version = "0.12.2"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.rust-s3]
version = "0.33.0"
default-features = false
features = ["tokio-rustls-tls", "tags"]
optional = true

[dependencies.sled]
version = "0.34.7"
optional = true

[dependencies.base64]
version = "0.22.0"
optional = true

[build-dependencies]
version_check = "0.9.4"
static-files = "0.2.3"

[features]
default = ["fs_storage"]
fs_storage = []
cloudinary_storage = ["dep:base64"]
s3_storage = ["dep:rust-s3"]
tixte_storage = ["reqwest/multipart"]
sled_storage = ["dep:sled"]

[profile.release]
lto = true
codegen-units = 1
