[package]
name = "website-screenshot"
version = "1.2.0"
authors = ["Tomio <mail@tomio.fun>"]
build = "build.rs"
categories = ["caching", "command-line-utilities", "database-implementations", "web-programming"]
edition = "2021"
include = [
  "src/**/*",
  "evasions/*",
  "build.rs",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "/README.md",
]
keywords = ["chrome", "chromedriver", "screenshots", "redis"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devtomio/website-screenshot"
description = "📸 website screenshots as a service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-web-static-files = "4.0.1"
anyhow = "1.0.69"
async-trait = "0.1.64"
cfg-if = "1.0.0"
cuid2 = "0.1.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures-util = "0.3.26"
http = "0.2.9"
once_cell = "1.17.1"
rayon = "1.6.1"
regress = "0.10.0"
serde_json = "1.0.93"
stable-pattern = "0.1.0"
static-files = "0.2.3"
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
url = "2.3.1"
website-screenshot-actix-governor = "0.3.0"

[dependencies.tokio]
version = "1.25.0"
features = ["full"]

[dependencies.fantoccini]
version = "0.21.0"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.redis]
version = "0.27.0"
features = ["tokio-comp"]

[dependencies.reqwest]
version = "0.12.0"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.rust-s3]
version = "0.35.0"
default-features = false
features = ["tokio-rustls-tls", "tags"]
optional = true

[dependencies.sled]
version = "0.34.7"
optional = true

[dependencies.base64]
version = "0.22.0"
optional = true

[build-dependencies]
version_check = "0.9.4"
static-files = "0.2.3"

[features]
default = ["fs_storage"]
fs_storage = []
cloudinary_storage = ["dep:base64"]
s3_storage = ["dep:rust-s3"]
tixte_storage = ["reqwest/multipart"]
sled_storage = ["dep:sled"]

[profile.release]
lto = true
codegen-units = 1
